objects/Account.object
<CustomObject>
    <fields>
        <fullName>Max_Number_Of_Contacts__c</fullName>
        <label>Max Number Of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Number_Of_Contacts__c</fullName>
        <label>Min_Number_Of_Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>